🐛 FIX: Login css made it go off screen

--- a/frontend/src/pages/LoginPage/LoginPage.css
+++ b/frontend/src/pages/LoginPage/LoginPage.css
@@ -7,7 +7,7 @@
   width: 50%;
   height: 50%;
   margin: auto;
-  margin-top: 50%;
+  margin-top: 300px;
   display: grid;
   color: var(--text-light-color);
   font-size: var(--xlg-text);
